--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -1,5 +1,5 @@
   <%= render "shared/error_messages", target: form.object %>
   <%= form.input :name %>
-  <%= form.input :quiz_questions, as: :cocoon, ordered_by: :position %>
+  <%= cocoon_fields form, :quiz_questions, insertable: true, ordered_by: :position %>
   <%= form.button :wrapped, cancel: quizzes_path %>
 
