--- a/app/views/quizzes/_quiz_question_fields.html.erb
+++ b/app/views/quizzes/_quiz_question_fields.html.erb
@@ -1,10 +1,8 @@
-<%= content_tag :div, class: 'nested-fields' do %>
-  <%= f.inputs name: sortable_label( ( f.object.persisted? ? f.object.question.name : 'New Question' ) ) do %>
+<%= field_set_tag( sortable_label(f.object.to_s), class: 'nested-fields' ) do %>
     <% if f.object.new_record? %>
-      <%= f.input :question, collection: Question.all %>
+      <%= f.association :question, collection: Question.all %>
     <% end %>
     <%= f.input :position, as: :hidden %>
     <%= link_to_remove_association 'Remove Question', f %>
-  <% end %>
 <% end %>
 
