--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -16,6 +16,10 @@
 </p>
 
 <p>
+  <b>Sponsor?</b> <%= committee.sponsor? ? 'Yes' : 'No' %>
+</p>
+
+<p>
   <b>Schedule:</b> <%=h committee.schedule %>
 </p>
 
