--- a/app/views/meetings/_meeting_item_fields.html.erb
+++ b/app/views/meetings/_meeting_item_fields.html.erb
@@ -1,12 +1,19 @@
+<% named ||= false; f.object.named ||= named %>
 <%= field_set_tag( sortable_label(f.object.to_s), class: 'nested-fields') do %>
-  <% unless f.object.motion_name.present? %>
-  <%= f.input :name, hint: "If not associated with a motion, provide name and leave motion blank." %>
-  <% end %>
-  <% unless f.object.name.present? %>
-  <%= f.association :motion, as: :select, label: 'Motion',
-    collection: Hash[ *f.object.meeting_section.meeting.committee.motions.
-      map { |m| [ m.to_s(:numbered), m.id  ] }.flatten ],
-    hint: "If associated with a motion, specify motion and leave name blank." %>
+  <% if f.object.name? || f.object.named %>
+    <%= f.input :name, hint: "What is the name of the meeting item?" %>
+  <% else %>
+    <% if f.object.new_record? %>
+    <%= f.input :named, as: :hidden %>
+    <%= f.input :motion_name, as: :autocomplete, label: 'Motion',
+      hint: "What motion is associated with this item?",
+      url: committee_motions_path(f.object.meeting_section.meeting.committee),
+        dynamic_term: "period_id", dynamic_id: "meeting_period_id" %>
+    <% else %>
+    <%= f.association :motion, as: :select, label: 'Motion',
+      collection: [ [ f.object.motion.to_s(:numbered), f.object.motion_id ] ],
+      hint: "You cannot change the motion associated with this item." %>
+    <% end %>
   <% end %>
   <%= f.input :duration, hint: "How many minutes are allocated to this item?" %>
   <%= f.input :description, hint: "Any additional comments to add specific to this listing." %>
