--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -16,6 +16,10 @@
 </p>
 
 <p>
+  <b>Duration:</b> <%=pluralize meeting.duration, 'minute' %>
+</p>
+
+<p>
   <b>Location:</b> <%= meeting.location %>
 </p>
 
