--- a/app/views/meetings/_meeting_item_fields.html.erb
+++ b/app/views/meetings/_meeting_item_fields.html.erb
@@ -3,12 +3,16 @@
   <% if f.object.name? || f.object.named %>
     <%= f.input :name, hint: "What is the name of the meeting item?" %>
   <% else %>
+    <% url = if permitted_to?( :staff, f.object.meeting_section.meeting )
+        committee_motions_path(f.object.meeting_section.meeting.committee)
+      else
+        proposed_committee_motions_path(f.object.meeting_section.meeting.committee)
+      end %>
     <% if f.object.new_record? %>
     <%= f.input :named, as: :hidden %>
     <%= f.input :motion_id, as: :autocomplete, label: 'Motion',
       hint: "What motion is associated with this item?",
-      url: committee_motions_path(f.object.meeting_section.meeting.committee),
-        dynamic_term: "period_id", dynamic_id: "meeting_period_id" %>
+      url: url, dynamic_term: "period_id", dynamic_id: "meeting_period_id" %>
     <% else %>
     <%= f.association :motion, as: :select, label: 'Motion',
       collection: [ [ f.object.motion.to_s(:numbered), f.object.motion_id ] ],
