--- a/app/views/memberships/renew.html.erb
+++ b/app/views/memberships/renew.html.erb
@@ -8,7 +8,8 @@
  end date to which you are interested to be reappointed to at this time.
 </p>
 
-<%= form_for user, url: renew_user_memberships_path(user) do |form| %>
+<%= form_for( user, url: renew_user_memberships_path(user),
+  html: { class: 'form-horizontal' } ) do |form| %>
 <%= render 'shared/error_messages', target: form.object %>
 <table>
 <thead>
