--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -11,5 +11,8 @@
   <% end %>
   <%= cocoon_fields form, :sponsorships, insertable: true %>
   <%= cocoon_fields form, :attachments, insertable: true %>
+  <% if form.object.meeting %>
+    <%= cocoon_fields form, :motion_meeting_segments, insertable: true, ordered_by: :position %>
+  <% end %>
   <%= form.button :wrapped, cancel: committee_motions_path(form.object.committee) %>
 
