--- a/app/views/motions/amend.html.erb
+++ b/app/views/motions/amend.html.erb
@@ -19,7 +19,7 @@ An amendment must have sponsors.
   <%= cocoon_fields form, :sponsorships, insertable: true %>
   <%= cocoon_fields form, :attachments, insertable: true %>
   <% if form.object.meeting %>
-    <%= cocoon_fields form, :motion_meeting_segments, insertable: true, ordered_by: :position %>
+    <%= cocoon_fields form, :motion_meeting_segments, label: 'Meeting Segments', insertable: true, ordered_by: :position %>
   <% end %>
   <%= form.button :wrapped, label: 'Amend', cancel: motion_path( motion ) %>
 <% end %>
