Add on behalf of to sponsorship.

--- a/app/views/sponsorships/_sponsorship_fields.html.erb
+++ b/app/views/sponsorships/_sponsorship_fields.html.erb
@@ -3,6 +3,8 @@
     <%= f.input :user_name, as: :autocomplete, label: "Sponsor", value_method: :to_s,
       url: ( f.object.motion.persisted? ? allowed_motion_users_path( f.object.motion, format: :json ) : users_path( format: :json ) ) %>
   <% end %>
+  <%= f.input :on_behalf_of, label: 'On behalf of',
+    hint: 'Indicate any additional sponsors or authors who should be credited but are not voting members of the committee in which the motion is introduced.' %>
   <%= link_to_remove_association 'Remove Sponsorship', f %>
 <% end %>
 
