--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -10,7 +10,8 @@
     hint: "You may not change the period of this motion." %>
   <% end %>
   <% if permitted_to?(:admin, form.object) %>
-  <%= form.input :comment_until, hint: "Specify to set a comment period from now until specified deadline." %>
+  <%= form.input :comment_until, as: :date_time_picker,
+    hint: "Specify to set a comment period from now until specified deadline." %>
   <% end %>
   <%= cocoon_fields form, :sponsorships, insertable: true %>
   <%= cocoon_fields form, :attachments, insertable: true %>
