--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -57,6 +57,9 @@
 <% if permitted_to? :edit, meeting -%>
 <%= link_to 'Edit', edit_meeting_path(meeting) %> |
 <% end -%>
+<% if permitted_to? :publish, meeting -%>
+<%= link_to 'Publish', publish_meeting_path(meeting) %> |
+<% end -%>
 <%= link_to 'Agenda', agenda_meeting_path(meeting, format: :pdf) %> |
 <%= link_to "Back to #{meeting.committee}", committee_meetings_path(meeting.committee) %>
 </p>
