--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -7,6 +7,10 @@
   <b>Committee:</b> <%=h authority.committee %>
 </p>
 
+<p><b>Appoint message:</b></p>
+
+<%=markdown authority.appoint_message %>
+
 <p><b>Join message:</b></p>
 
 <%=markdown authority.join_message %>
