--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -12,6 +12,7 @@
   <%= form.association :meeting_template, hint: 'What template should be used to create meeting agendas?' %>
   <%= form.association :brand %>
   <%= form.input :publish_email, hint: 'Where is the default address to publish meeting notices?' %>
+  <%= form.input :appoint_message %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
   <%= form.input :reject_message %>
