--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -35,6 +35,10 @@
   <b>Publish email:</b> <%= committee.publish_email %>
 </p>
 
+<p><b>Appoint message:</b></p>
+
+<%=markdown committee.appoint_message %>
+
 <p><b>Join message:</b></p>
 
 <%=markdown committee.join_message %>
