--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -44,6 +44,10 @@
   <% end %>
 </p>
 
+<p><b>Appoint message:</b></p>
+
+<%=markdown position.appoint_message %>
+
 <p><b>Join message:</b></p>
 
 <%=markdown position.join_message %>
