--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -1,6 +1,7 @@
 <%=content_tag :h1, "Register user" %>
 
-<%= simple_form_for(user, url: register_new_user_path, html: { multipart: true } ) do |f| %>
+<%= simple_form_for(user, url: sso_register_path( provider: params[:provider] ),
+  html: { multipart: true } ) do |f| %>
   <%= render partial: 'form', object: f %>
   <%= f.button :wrapped, label: 'Register',
     cancel: ( sso_net_id ? home_path : login_path ) %>
