Add information to join notice about renewal notices.  Show memberships that can renew a membership.  Show memberships that can close a membershipr request.

--- a/app/views/membership_mailer/join_notice.html.erb
+++ b/app/views/membership_mailer/join_notice.html.erb
@@ -32,6 +32,10 @@ Concurrent with your appointment to this position, you hold the following commit
 <% end -%>
 
 <p>
+You will <%if @membership.renewal_candidate?%>be offered the opportunity<% else %>not be asked<% end %> to renew in the future.
+</p>
+
+<p>
 Best regards,
 </p>
 
