--- a/app/views/motions/propose.html.erb
+++ b/app/views/motions/propose.html.erb
@@ -9,8 +9,10 @@
 <%= simple_form_for motion, as: :motion,
   url: propose_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= render partial: 'motions/event_fields', object: form %>
-
+  <%= form.simple_fields_for :motion_events,
+    form.object.motion_events.populate_for( 'propose' ) do |subform| %>
+    <%= render partial: 'motions/motion_event_fields', locals: { f: subform } %>
+  <% end %>
   <%= form.button :wrapped, label: 'Propose', cancel: motion_path(form.object) %>
 <% end %>
 
