--- a/app/views/motions/amend.html.erb
+++ b/app/views/motions/amend.html.erb
@@ -11,7 +11,10 @@ An amendment must have sponsors.
 <%= simple_form_for amendment, as: :amendment,
   url: amend_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= render partial: 'motions/event_fields', object: form %>
+  <%= form.simple_fields_for :motion_events,
+    form.object.motion_events.populate_for( 'propose' ) do |subform| %>
+    <%= render partial: 'motions/motion_event_fields', locals: { f: subform } %>
+  <% end %>
   <%= form.input :name, label: 'Name',
     hint: 'What should be the new name of the amendment? (Usually best to use the default)' %>
   <%= form.input :description, hint: 'Briefly describe amended purpose and effect of motion' %>
