--- a/app/views/motions/refer.html.erb
+++ b/app/views/motions/refer.html.erb
@@ -6,16 +6,22 @@
   then work through that committee's normal business process.
 <% end %>
 
-<%= simple_form_for referred_motion, as: :referred_motion,
+<%= simple_form_for motion, as: :motion,
   url: refer_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
+ 
+  <%= form.simple_fields_for :motion_events,
+    form.object.motion_events.populate_for( 'refer' ) do |subform| %>
+    <%= render partial: 'motions/motion_event_fields', locals: { f: subform } %>
+  <% end %>
 
-  <%= render partial: 'motions/event_fields', object: form %>
-
-  <%= form.input :committee_name, label: 'Committee',
-    hint: 'To which committee should this motion be referred?' %>
-  <%= form.input :name, label: 'Name',
-    hint: 'What should be the new name of the motion?' %>
+  <%= form.simple_fields_for :referred_motions,
+    form.object.referred_motions.populate_referee do |subform| %>
+    <%= subform.input :committee_name, label: 'Committee',
+      hint: 'To which committee should this motion be referred?' %>
+    <%= subform.input :name, label: 'Name',
+      hint: 'What should be the new name of the motion?' %>
+   <% end %>
 
   <%= form.button :wrapped, label: 'Refer', cancel: motion_path(motion) %>
 <% end %>
